[gd_scene load_steps=7 format=3 uid="uid://biujwrqm8yuit"]

[ext_resource type="Script" uid="uid://caq4xp8rk0adr" path="res://main/scripts/settins.gd" id="1_3sksu"]
[ext_resource type="FontFile" uid="uid://c4xaastppdtit" path="res://assetes/fonts/RiseOfKingdom-rw3p.ttf" id="2_8l0ua"]
[ext_resource type="LabelSettings" uid="uid://bf045t7qwo58h" path="res://main/labelSettings/settings.tres" id="3_rdl7s"]
[ext_resource type="PackedScene" uid="uid://bov1qooc62ki0" path="res://main/scenes/menu_btn.tscn" id="4_c6pd8"]
[ext_resource type="PackedScene" uid="uid://drjum0xy8deqq" path="res://main/scenes/full_s_creen_button.tscn" id="5_nrjs2"]
[ext_resource type="AudioStream" uid="uid://8t2bhv6sm04f" path="res://assetes/sounds/bubblng.mp3" id="6_ckox4"]

[node name="Settins" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3sksu")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_bottom = 328.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VolumeLbl" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.941176, 0.784314, 0.513726, 1)
theme_override_fonts/font = ExtResource("2_8l0ua")
theme_override_font_sizes/font_size = 28
text = "Volume
"
label_settings = ExtResource("3_rdl7s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Volume" type="HSlider" parent="PanelContainer/VBoxContainer"]
self_modulate = Color(0.760784, 0.372549, 0.00784314, 1)
layout_mode = 2
min_value = -30.0
max_value = 30.0

[node name="MuteLBL" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Mute
"
label_settings = ExtResource("3_rdl7s")
horizontal_alignment = 1

[node name="Mute" type="CheckBox" parent="PanelContainer/VBoxContainer"]
modulate = Color(0.760784, 0.372549, 0.00784314, 1)
self_modulate = Color(0.760784, 0.372549, 0.00784314, 1)
layout_mode = 2
size_flags_horizontal = 4

[node name="OptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1
selected = 1
item_count = 4
popup/item_0/text = "1920 x 1080"
popup/item_0/id = 0
popup/item_1/text = "1600 x 900"
popup/item_1/id = 1
popup/item_2/text = "1280 x 720"
popup/item_2/id = 2
popup/item_3/text = "1152 x 648"
popup/item_3/id = 3

[node name="MainMenu" parent="." instance=ExtResource("4_c6pd8")]
layout_mode = 0
offset_left = 481.0
offset_top = 504.0
offset_right = 861.0
offset_bottom = 634.0
scale = Vector2(0.5, 0.5)
text = "Main Menu"

[node name="Reset" parent="." instance=ExtResource("4_c6pd8")]
layout_mode = 0
offset_left = 480.0
offset_top = 416.0
offset_right = 860.0
offset_bottom = 546.0
scale = Vector2(0.5, 0.5)
text = "Reset Settings"

[node name="FullSCreenButton" parent="." instance=ExtResource("5_nrjs2")]
layout_mode = 1
offset_left = -8.0
offset_top = 592.0
offset_right = 56.0
offset_bottom = 656.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ckox4")
autoplay = true
parameters/looping = true

[connection signal="value_changed" from="PanelContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="PanelContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="MainMenu" to="." method="_on_menu_btn_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
